Replace Data Source specific format options with DataFormat message (#1049)
* Proto: Add DataFormat proto and use when specifying data format/options

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Core: Update DataSource model to support new DataFormat proto

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Python SDK: Update SDK to use new data format API.

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Fix python lint

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Fix Python unit tests refercing old argument `class_path'

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Fix DataSource's from_proto() not coverting DataFormat protos to native objects.

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Fix python lint

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Core: Add convience methods to DataGenerator to create Kinesis source, DataFormat specs

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Core: Add DataSourceValidator to valid data source specs in Feature Tables

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* E2E: Fix specifying data format in FeatureTables in e2e tests

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Rebase on master

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* E2E: Fix typo

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Serving: Fix IT TestUtils not producing Protobuf specs inline with the current API

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Fix java lint

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* E2E: Fix another typo

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Proto: Split DataFormat message into StreamFormat and FileFormat messages

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Core: Update Core to support split StreamFormat and FileFormat messages

Signed-off-by: Zhu Zhanyan <program.nom@gmail.com>

* Proto: Split data formats from DataSource.proto into new
DataFormat.proto

Signed-off-by: Zhu Zhanyan <program