@@ -19,14 +19,12 @@ package feast.serving.it;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import com.google.common.collect.ImmutableMap;
-import com.google.protobuf.Duration;
 import feast.common.auth.credentials.OAuthCredentials;
+import feast.common.it.DataGenerator;
 import feast.proto.core.CoreServiceGrpc;
 import feast.proto.core.CoreServiceGrpc.CoreServiceBlockingStub;
-import feast.proto.core.DataSourceProto.DataSource;
 import feast.proto.core.EntityProto.Entity;
 import feast.proto.core.EntityProto.EntitySpecV2;
-import feast.proto.core.FeatureProto.FeatureSpecV2;
 import feast.proto.core.FeatureTableProto.FeatureTable;
 import feast.proto.core.FeatureTableProto.FeatureTableSpec;
 import feast.proto.serving.ServingAPIProto.FeatureReferenceV2;
@@ -37,7 +35,6 @@ import io.grpc.CallCredentials;
 import io.grpc.Channel;
 import io.grpc.ManagedChannelBuilder;
 import java.util.*;
-import java.util.stream.Collectors;
 
 public class TestUtils {
 
@@ -64,44 +61,6 @@ public class TestUtils {
     return new CoreSimpleAPIClient(coreService);
   }
 
-  public static FeatureTableSpec createFeatureTableSpec(
-      String name,
-      List<String> entities,
-      Map<String, ValueProto.ValueType.Enum> features,
-      int maxAgeSecs,
-      Map<String, String> labels) {
-    return FeatureTableSpec.newBuilder()
-        .setName(name)
-        .setMaxAge(Duration.newBuilder().setSeconds(maxAgeSecs).build())
-        .addAllEntities(entities)
-        .addAllFeatures(
-            features.entrySet().stream()
-                .map(
-                    entry ->
-                        FeatureSpecV2.newBuilder()
-                            .setName(entry.getKey())
-                            .setValueType(entry.getValue())
-                            .putAllLabels(labels)
-                            .build())
-                .collect(Collectors.toList()))
-        .putAllLabels(labels)
-        .build();
-  }
-
-  public static DataSource createFileDataSourceSpec(
-      String fileURL, String fileFormat, String timestampColumn, String datePartitionColumn) {
-    return DataSource.newBuilder()
-        .setType(DataSource.SourceType.BATCH_FILE)
-        .setFileOptions(
-            DataSource.FileOptions.newBuilder()
-                .setFileFormat(fileFormat)
-                .setFileUrl(fileURL)
-                .build())
-        .setEventTimestampColumn(timestampColumn)
-        .setDatePartitionColumn(datePartitionColumn)
-        .build();
-  }
-
   public static GetOnlineFeaturesRequestV2 createOnlineFeatureRequest(
       String projectName,
       List<FeatureReferenceV2> featureReferences,
@@ -121,19 +80,15 @@ public class TestUtils {
       ImmutableMap<String, ValueProto.ValueType.Enum> features,
       int maxAgeSecs) {
     FeatureTableSpec expectedFeatureTableSpec =
-        createFeatureTableSpec(
+        DataGenerator.createFeatureTableSpec(
                 featureTableName,
                 entities,
-                new HashMap<>() {
-                  {
-                    putAll(features);
-                  }
-                },
+                features,
                 maxAgeSecs,
-                ImmutableMap.of("feat_key2", "feat_value2"))
+                Map.of("feat_key2", "feat_value2"))
             .toBuilder()
             .setBatchSource(
-                createFileDataSourceSpec("file:///path/to/file", "parquet", "ts_col", ""))
+                DataGenerator.createFileDataSourceSpec("file:///path/to/file", "ts_col", "dt_col"))
             .build();
     secureApiClient.simpleApplyFeatureTable(expectedFeatureTableSpec);
     FeatureTable actualFeatureTable =
